--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.content a {
+  @apply underline font-semibold;
+}
+
+.content a:hover {
+  @apply text-blue-700;
+}
+
+.content ol {
+  @apply list-decimal;
+}
